Fix spacing

--- a/public/styles/components/_atom.scss
+++ b/public/styles/components/_atom.scss
@@ -32,3 +32,9 @@
   padding: 5px;
   border-bottom: 1px solid #ccc;
 }
+
+.atom__question {
+    & + & {
+        margin-top: 10px;
+    }
+}
